# StrompreisPrognose

./: .cache.sqlite  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  scratch_openmeteo.py
docs/: ARCHITECTURE.md  ideen.md
src/data_fetcher/: price_api.py  weather_api.py  weather_forecast_api.py
src/database/: database.py  models.py  seed_locations.py
